<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
	xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
	<modelVersion>4.0.0</modelVersion>

	<groupId>com.etnetera.qa</groupId>
	<artifactId>seleniumbrowser</artifactId>
	<version>0.0.4</version>
	<packaging>jar</packaging>

	<name>SeleniumBrowser</name>
	<description>Helper classes for working with Selenium WebDriver tests using more object approach, using browser context which wraps driver, pages, modules and logics.</description>

	<properties>
		<project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
		<java.version>1.8</java.version>
		<maven.source.version>1.8</maven.source.version>
		<maven.target.version>1.8</maven.target.version>
	</properties>

	<distributionManagement>
		<repository>
			<id>artifactory.etn</id>
			<name>artifactory.etn-releases</name>
			<url>http://artifactory.etn/etn-qa</url>
		</repository>
		<snapshotRepository>
			<id>artifactory.etn</id>
			<name>artifactory.etn-snapshots</name>
			<url>http://artifactory.etn/etn-qa</url>
		</snapshotRepository>
	</distributionManagement>

	<dependencies>
		<dependency>
			<groupId>org.seleniumhq.selenium</groupId>
			<artifactId>selenium-java</artifactId>
			<version>2.48.2</version>
		</dependency>
		<dependency>
			<groupId>junit</groupId>
			<artifactId>junit</artifactId>
			<version>4.12</version>
			<scope>test</scope>
		</dependency>
	</dependencies>

	<build>
		<plugins>
			<plugin>
				<artifactId>maven-compiler-plugin</artifactId>
				<version>3.3</version>
				<configuration>
					<source>${java.version}</source>
					<target>${java.version}</target>
				</configuration>
			</plugin>
			<plugin>
				<artifactId>maven-source-plugin</artifactId>
				<version>2.4</version>
				<executions>
					<execution>
						<goals>
							<goal>jar-no-fork</goal>
						</goals>
					</execution>
				</executions>
			</plugin>
			<plugin>
				<artifactId>maven-javadoc-plugin</artifactId>
				<version>2.10.3</version>
				<executions>
					<execution>
						<goals>
							<goal>jar</goal>
						</goals>
					</execution>
				</executions>
			</plugin>
		</plugins>
	</build>
</project>